# sandbox

./: .gitignore  LICENSE.md  README.md  build.ps1  build.sh
canvas-whiteboard-app/: Cargo.toml
canvas-whiteboard-app/src/: lib.rs
canvas-whiteboard-app/src/canvas/: controller.rs  mod.rs
canvas-whiteboard-app/src/model/: block.rs  hash.rs  shelf.rs
canvas-whiteboard-app/src/render/: markdown.rs
canvas-whiteboard-app/src/scripting/: lexer.rs
canvas-whiteboard-app/www/: style.css
codechef/: artbalan  artbalan.cpp  chefing  chefing.cpp  depchef  depchef.cpp  hmappy2  hmappy2.cpp  magicjar  magicjar.cpp  manrect  manrect.cpp
codeforces/: meaningless_operations  meaningless_operations.cpp  meaningless_operations.cpp~  nhwal  nhwal.cpp  nipcg.py  nirab.py  parity  parity.cpp  tape.cpp
docs/: blockchain.html  blockchain.odt  blockchain.org  blockchain.tex  dsc-blockchain.org
dsc/: lis.py
embedded_systems/: c51.sh  eval1.asm  eval2.c
google-hash-code/: SlideShow.java  outputa.out  pizza.cpp  slideshow.py
lisp-c/: lisp-impl-c.c
os_prog/: alpha_teja  alpha_teja.c  alphabets  alphabets.c  code1  code1.c  code2  code2.c  code3  code3.c  code4  code4.c  rubix1  rubix1.cpp  testshr  testshr.c
perl-prac/: aprac.pl
practical-common-lisp/: #myvaldb.lisp#  #prac.lisp#  .#alpha.lisp  .#prac.lisp  cddb.fasl  myvaldb.fasl  myvaldb.lisp  myvaldb.lisp~  prac.fasl  prac.lisp  prac.lisp~  test.fasl  test.lisp  test.lisp~  valdb.fasl  valdb.lisp  valdb.lisp~
practice/: Makefile  turtle  turtle.c
sicp/: newton-sqrt-appx-meth.rkt  newton-sqrt-appx-meth.rkt~  (+2 more)
(+105 files in other folders)
