[package]
name = "canvas-whiteboard"
version = "0.1.0"
edition = "2021"
description = "A canvas whiteboard app with Logseq-like block structure, compiled to WebAssembly"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
pulldown-cmark = "0.12"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "KeyboardEvent",
    "EventTarget",
    "console",
    "CssStyleDeclaration",
    "DomRect",
    "HtmlDivElement",
    "Node",
    "Text",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
